--- a/style.css
+++ b/style.css
@@ -1,64 +1,76 @@
-*{
-  margin:0;
+* {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
-  font-family: "Nunito",sans-serif;
+body {
+  font-family: "Nunito", sans-serif;
   background: #f8f8f8;
+  background-image: url(./assets/photo-1473773508845-188df298d2d1.jpg);
+  background-size: cover;
 }
 
-.input{
+.input {
   text-align: center;
-  margin: 100px auto;
+  margin-top: 200px;
 }
 
-input[type="submit"]{
+input[type="submit"] {
+
   padding: 15px 30px;
   background: #e7e7e7;
   border: none;
-  border-radius: 1px;
-  font-family: "Nunito",sans-serif;
-  font-weight:bold;
+  border-radius: 20px;
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
   font-size: 20px;
+
 }
 
-.input input[type="text"]{
+input[type="submit"]:hover {
+  color: white;
+  background-color: tomato;
+}
+
+
+.input input[type="text"] {
+  text-align: start;
   width: 600px;
   height: 55px;
   padding: 5px 10px;
   background: #e7e7e7;
   border: none;
-  border-radius: 1px;
-  font-family: "Nunito",sans-serif;
-  font-weight:bold;
+  border-radius: 20px;
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
   font-size: 20px;
+
 }
 
-.card{
+.card {
   width: 50%;
   background: #e7e7e7;
   height: 40vh;
-  margin: 50px auto;
-  border-radius: 2px;
+  margin: 100px auto;
+  border-radius: 20px;
 }
 
 
-.close{
+.close {
   float: right;
   margin-top: -2px;
   cursor: pointer;
   margin-right: 20px;
 }
 
-.card h1{
-  padding: 5px 0;
+.card h1 {
+  margin-top: 50px;
   text-align: center;
 }
 
-.card p{
+.card p {
   text-align: center;
-  margin:40px 0;
-  font-size:20px;
+  margin: 40px;
+  font-size: 20px;
 }
